app/deploy/external-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: worldtimeapi
spec:
  hosts:
  - "worldtimeapi.org"
  ports:
  - number: 10000
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
