app/deploy/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - app-gateway
  http:
  - match:
    - uri:
        exact: /time
    route:
    - destination:
        host: app-service
        port:
          number: 10000
  - match:
    - uri:
        exact: /statistics
    route:
    - destination:
        host: app-service
        port:
          number: 10000
